syntax = "proto3";

option csharp_namespace = "Intra_Block.COM";

package intra;

service Intra {
  rpc Insert (InsertionRequest) returns (GenericResponse);
  rpc Retrieve (RetrievalRequest) returns (RetrievalResponse);
  rpc Remove (RemoveRequest) returns (GenericResponse);

  rpc Report (ReportRequest) returns (ReportResponse);
}

message InsertionRequest {
  string key = 1;
  string value = 2;
  uint64 expiry = 3;
}

message InsertionResponse {
  bool successful = 1;
  string message = 2;
}

message RetrievalRequest {
  string key = 1;
}

message RetrievalResponse {
  string value = 1;
}

message Exterminatus {}

message ReportRequest {}

message ReportResponse {
  uint64 numberOfEntries = 1;
  uint64 currentMemoryUsage = 2;
  uint64 uptime = 3;
  Averages averages = 4;
}

message Averages {
  double RequestsPerMinute = 1;
  double TimeToRetrieve = 2;
  double TimeToInsert = 3;
  double ReapsPerMinute = 4;
  double RequestCompletion = 5;
}

message RemoveRequest {
  string key = 1;
}

message RemoveResponse {
  bool successful = 1;
  string message = 2;
}

message GenericResponse {
  bool successful = 1;
  string message = 2;
}

